--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"test": "npm run lint && jest",
 		"test:watch": "jest --watch",
 		"test:coverage": "jest --coverage",
-		"lint": "eslint lib test",
+		"lint": "eslint index.js test",
 		"prepare": "npm run build"
 	},
 	"files": [
